2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
	* font.h font.cpp (and client files)
	  - replaced "const char" with "string"
	* submarine_interface.cpp
	  - new torpedo images and drawing.
	  - draw info about available torpedo types.

2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
	* replaced medium merchant model by new model.
	* introduced small merchant model.
	  - now ten ships available, 3 merchants, 2 freighters, 2 warships,
	    1 troopships, 2 escorts.

2003-07-12  Thorsten Jordan <thorsten_jordan@gmx.de>
	* further new model.

2003-07-11  Thorsten Jordan <thorsten_jordan@gmx.de>
	* introduced two new models.

2003-07-11  Thorsten Jordan <thorsten_jordan@gmx.de>
	* sea_object.cpp game.cpp convoy.cpp etc.
	  - new throttle model. more code for custom mission generation.

2003-07-10  Thorsten Jordan <thorsten_jordan@gmx.de>
	* gun_shell.h gun_shell.cpp
	  - new simulation of shot trajectory.
	  - correct rotation of shell model for display
	* user_interface.cpp
	  - display sum of sunken tons

2003-07-09  Thorsten Jordan <thorsten_jordan@gmx.de>
	* made release 0.0.11 and increased version number to 0.0.12

2003-07-09  Thorsten Jordan <thorsten_jordan@gmx.de>
	* model.cpp
	  - replaced construct that was compiled wrongly by VC++6.
	    Now this win32 bug is fixed.
	    VC6 can't compile "Release" but "Debug" only ("internal
	    compiler error").
	    What a faulty compiler! Anyone wants to try WatcomC++ 11
	    on this? or gcc/win32?

2003-07-07  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - fixed code for new water, removed old water code.

2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
	* game.cpp
	  - end game when contact to enemy is lost

2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
	* game.h game.cpp
	  - first bits of result recording and display, rather experimental.

2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
	* smokestream.cpp
	  - segfault reason found & fixed
