@@ -22,7 +22,8 @@
 model	*merchant_large, *merchant_medium, *merchant_small,
 	*subVII, *subXXI, *destroyer_tribal, *troopship_medium,
 	*battleship_malaya, *carrier_bogue, *torpedo_g7, *depth_charge_mdl, *gun_shell_mdl,
-	*skyhemisphere, *corvette_mdl, *freighter_medium, *freighter_large;
+	*skyhemisphere, *corvette_mdl, *freighter_medium, *freighter_large,
+	*tanker_small;
 
 texture *water, *background, *gauge1,
 	*gauge2, *gauge3, *gauge4, *gauge5, *psbackgr, *panelbackgr,
@@ -58,6 +59,7 @@ void init_global_data(void)
 	corvette_mdl = new model((get_data_dir() + MODEL_DIR + "corvette.mdl"));
 	freighter_large = new model((get_data_dir() + MODEL_DIR + "largefreighter.mdl"));
 	freighter_medium = new model((get_data_dir() + MODEL_DIR + "mediumfreighter.mdl"));
+	tanker_small = new model((get_data_dir() + MODEL_DIR + "smalltanker.mdl"));
 	font_arial = new font(get_data_dir() + FONT_DIR + "font_arial.png");
 	font_arial2 = new font(get_data_dir() + FONT_DIR + "font_arial2.png");
 	font_ellis = new font(get_data_dir() + FONT_DIR + "font_ellis.png");
