@@ -46,7 +46,7 @@ token tokens[] = {
 	token(TKN_T11, "T11"),
 	token(TKN_LARGEMERCHANT, "largemerchant"),
 	token(TKN_MEDIUMMERCHANT, "mediummerchant"),
-	token(TKN_SMALLMERCHANT, "mediummerchant"),
+	token(TKN_SMALLMERCHANT, "smallmerchant"),
 	token(TKN_MEDIUMTROOPSHIP, "mediumtroopship"),
 	token(TKN_DESTROYERTRIBAL, "destroyertribal"),
 	token(TKN_BATTLESHIPMALAYA, "battleshipmalaya"),
@@ -54,6 +54,7 @@ token tokens[] = {
 	token(TKN_CORVETTE, "corvette"),
 	token(TKN_LARGEFREIGHTER, "largefreighter"),
 	token(TKN_MEDIUMFREIGHTER, "mediumfreighter"),
+	token(TKN_SMALLMERCHANT, "smalltanker"),
 	token(TKN_CONVOY, "convoy"),
 	token(TKN_WAYPOINT, "waypoint"),
 	token(TKN_SPEED, "speed"),
